--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
         <li>
           <a class="nav-link" routerLink="/fallback-report">Fallback Report</a>
         </li>
+        <li>
+          <a class="nav-link" routerLink="/profiling-activity">Profiling Activity</a>
+        </li>
       </ul>
     </div>
   </nav>
